--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "thesis project",
   "main": ".eslintrc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "mongodb": "filler"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -25,12 +24,19 @@
   },
   "homepage": "https://github.com/chen101385/hrsf87-CC-thesis#readme",
   "dependencies": {
+    "aws-sdk": "^2.188.0",
     "axios": "^0.17.1",
+    "babel-core": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
     "csv-writer": "0.0.3",
+    "faker": "^4.1.0",
     "koa": "^2.4.1",
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.0.3"
+    "mongoose": "^5.0.3",
+    "newrelic": "^2.7.0",
+    "node-fetch": "^2.0.0",
+    "uuid-v4": "^0.1.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
