--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "csv-writer": "0.0.3",
     "faker": "^4.1.0",
     "koa": "^2.4.1",
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
+    "mocha": "^5.0.0",
     "mongoose": "^5.0.3",
     "newrelic": "^2.7.0",
     "node-fetch": "^2.0.0",
