--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "thesis project",
   "main": ".eslintrc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "chai-http": "^3.0.0",
     "csv-writer": "0.0.3",
     "faker": "^4.1.0",
+    "jest": "^22.2.1",
     "koa": "^2.4.1",
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
@@ -39,11 +40,13 @@
     "mongoose": "^5.0.3",
     "newrelic": "^2.7.0",
     "node-fetch": "^2.0.0",
+    "redis": "^2.8.0",
     "uuid-v4": "^0.1.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0"
+    "babel-register": "^6.26.0",
+    "supertest": "^3.0.0"
   }
 }
