started working on cluster.js

--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
+    "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "cluster": "^0.7.7",
     "csv-writer": "0.0.3",
+    "express": "^4.16.2",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
     "koa": "^2.4.1",
@@ -40,6 +43,7 @@
     "mongoose": "^5.0.3",
     "newrelic": "^2.7.0",
     "node-fetch": "^2.0.0",
+    "os": "^0.1.1",
     "redis": "^2.8.0",
     "util": "^0.10.3",
     "uuid-v4": "^0.1.0"
